[gd_scene load_steps=4 format=3 uid="uid://cpk1wj8n3qw2o"]

[ext_resource type="Script" path="res://scripts/ui/CommandShipPanel.gd" id="1_panel"]
[ext_resource type="Theme" uid="uid://bh3pao1yls74n" path="res://resources/themes/main_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.039, 0.059, 0.118, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.129, 0.588, 0.953, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.129, 0.588, 0.953, 0.4)
shadow_size = 6

[node name="CommandShipPanel" type="Panel"]
custom_minimum_size = Vector2(505, 100)
offset_left = 510.0
offset_top = 620.0
offset_right = 1015.0
offset_bottom = 720.0
mouse_filter = 0
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_panel")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/separation = 2

[node name="BuildButtonsRow" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="Label" type="Label" parent="VBox/BuildButtonsRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898, 1, 1)
theme_override_font_sizes/font_size = 10
text = "Build:"
vertical_alignment = 1

[node name="ButtonScroll" type="ScrollContainer" parent="VBox/BuildButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0
mouse_filter = 0

[node name="UnitButtons" type="HBoxContainer" parent="VBox/BuildButtonsRow/ButtonScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4
mouse_filter = 0

[node name="QueueRow" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="Label" type="Label" parent="VBox/QueueRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898, 1, 1)
theme_override_font_sizes/font_size = 10
text = "Queue:"
vertical_alignment = 1

[node name="QueueScroll" type="ScrollContainer" parent="VBox/QueueRow"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0
mouse_filter = 0

[node name="QueueList" type="HBoxContainer" parent="VBox/QueueRow/QueueScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4
mouse_filter = 0
